# audio-player__backend

./: .env  .gitignore  Cargo.toml  README.md  config.toml  rustfmt.toml
migrations/2023-04-08-153608_organisation_organisations/: down.sql  up.sql
migrations/2023-04-08-153620_audio_audios/: down.sql  up.sql
migrations/2023-04-08-153903_user_users/: down.sql  up.sql
migrations/2023-04-08-153908_organisation_users/: down.sql  up.sql
src/: app.rs  config.rs  log.rs  main.rs  schema.rs
src/api/: info.rs
src/constants/: message_constants.rs
src/routes/: catcher.rs  mod.rs
src/utils/: db.rs
